k8s/frontend-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: frontend-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: 103021623558.dkr.ecr.ap-south-1.amazonaws.com/mern-ecommerce-frontend:v1

          ports:
            - containerPort: 80
