k8s/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mongo

spec:
  serviceName: mongo
  replicas: 1

  selector:
    matchLabels:
      app: mongo

  template:
    metadata:
      labels:
        app: mongo

    spec:
      containers:
      - name: mongo
        image: mongo:7

        ports:
        - name: mongodb
          containerPort: 27017

        volumeMounts:
        - name: mongo-data
          mountPath: /data/db

        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 30
          periodSeconds: 20

  volumeClaimTemplates:
  - metadata:
      name: mongo-data

    spec:
      accessModes:
      - ReadWriteOnce

      storageClassName: gp2

      resources:
        requests:
          storage: 5Gi
